<resources>

    <!-- Common -->
    <string name="app_name">Calculator</string>
    <string name="title_calc">Calculator</string>
    <string name="title_unit">Unit Converter</string>
    <string name="title_currency">Currency</string>
    <string name="title_settings">Settings</string>
    <string name="twice_tap_exit">Click BACK again to exit</string>
    <string name="cancel">Cancel</string>

    <!-- Calculator -->
    <string name="error">Error</string>
    <string name="infinity" translatable="false">∞</string>
    <string name="copied">Copied:</string>
    <string name="deleted">Deleted:</string>
    <string name="history">History</string>
    <string name="history_cleared">History cleared!</string>
    <string name="no_history">No history yet</string>
    <string name="you_can">You can…</string>
    <string name="context_menu_copy">Copy</string>
    <string name="context_menu_copy_all">Copy all</string>
    <string name="context_menu_copy_expr">Copy expression</string>
    <string name="context_menu_copy_res">Copy result</string>
    <string name="delete_record">Delete record</string>
    <string name="history_clear">Clear</string>
    <string name="history_clear_confirm">Are you sure you want wipe calculation history?</string>
    <string name="paste_replace">Replace</string>
    <string name="paste_after">Paste after</string>
    <string name="calculator_input_hint" translatable="false">2+2</string>
    <string name="debug_lexeme_list_title">Expression lexemes:</string>
    <string name="debug_lexer_time">Lexer time: %1$d ms</string>
    <string name="debug_parser_time">Parser time: %1$d ms</string>
    <string name="debug_compute_time">Compute time: %1$d ms</string>

    <!-- Currencies -->
    <string name="updated">Updated: </string>
    <string name="currencies_add">Add</string>
    <string name="currencies_edit">Edit</string>
    <string name="currencies_list_modify">Set up currencies</string>
    <string name="currency_AUD">Australian dollar</string>
    <string name="currency_AZN">Azerbaijani manat</string>
    <string name="currency_AMD">Armenian dram</string>
    <string name="currency_BYN">Belarusian ruble</string>
    <string name="currency_BGN">Bulgarian lev</string>
    <string name="currency_BRL">Brazilian real</string>
    <string name="currency_HUF">Hungarian forint</string>
    <string name="currency_KRW">South Korean won</string>
    <string name="currency_HKD">Hong Kong dollar</string>
    <string name="currency_DKK">Danish krone</string>
    <string name="currency_USD">US dollar</string>
    <string name="currency_EUR">Euro</string>
    <string name="currency_INR">Indian rupee</string>
    <string name="currency_KZT">Kazakhstani tenge</string>
    <string name="currency_CAD">Canadian dollar</string>
    <string name="currency_KGS">Kyrgyzstani som</string>
    <string name="currency_CNY">Chinese yuan</string>
    <string name="currency_MDL">Moldovan leu</string>
    <string name="currency_TMT">Turkmenistan manat</string>
    <string name="currency_NOK">Norwegian krone</string>
    <string name="currency_PLN">Polish złoty</string>
    <string name="currency_RON">Romanian leu</string>
    <string name="currency_XDR">Special Drawing Rights</string>
    <string name="currency_SGD">Singapore dollar</string>
    <string name="currency_TJS">Tajikistani somoni</string>
    <string name="currency_TRY">Turkish lira</string>
    <string name="currency_UZS">Uzbekistani som</string>
    <string name="currency_UAH">Ukrainian hryvnia</string>
    <string name="currency_GBP">Pound sterling</string>
    <string name="currency_CZK">Czech koruna</string>
    <string name="currency_SEK">Swedish krona</string>
    <string name="currency_CHF">Swiss franc</string>
    <string name="currency_ZAR">South African rand</string>
    <string name="currency_JPY">Japanese yen</string>
    <string name="currency_RUB">Russian ruble</string>
    <string name="save_currency_value">Save last conversion</string>
    <string name="empty_text_no_currencies_added">No currency items added</string>
    <string name="empty_text_no_currencies_found">No matching currencies found</string>
    <string name="empty_text_all_currencies_added">All available items already added</string>
    <string name="currencies_no_internet">Update failed: connection unavailable</string>
    <string name="action_edit">Edit</string>
    <string name="action_select_all">Select all</string>
    <string name="action_deselect_all">Deselect all</string>
    <string name="tooltip_remove_currency">Long click on item toggles deletion mode</string>
    <string name="action_tooltip_got_it">Got it</string>
    <string name="hint_currency_search">Search for currencies…</string>
    <string name="currencies_update_failed">Load failed: update app or contact dev if it is not fixed in last version</string>
    <string name="currencies_update_exception">Load exception: update app or contact dev if it is not fixed in last version</string>
    <string name="currencies_update_toast">Updating…</string>
    <string name="action_undo">Undo</string>
    <string name="message_item_shown">Item \"%s\" made shown</string>
    <string name="message_item_hidden">Item \"%s\" made hidden</string>

    <!-- Unit Converter -->
    <string name="unit_category_velocity">Velocity</string>
    <string name="unit_category_distance">Distance</string>
    <string name="unit_category_area">Area</string>
    <string name="unit_category_volume">Volume</string>
    <string name="unit_category_mass">Mass</string>
    <string name="unit_category_pressure">Pressure</string>
    <string name="unit_category_temperature">Temperature</string>
    <string name="unit_view">Unit view</string>
    <string name="unit_view_simple">Simple</string>
    <string name="unit_view_powerful">Powerful</string>
    <string name="unit_view_half_powerful">Half-Powerful</string>
    <string name="unit_view_simple_extra_action_title">Select button action</string>
    <string name="unit_view_simple_swap">Swap dimensions</string>
    <string name="unit_view_simple_list_all">List all</string>
    <string name="distance_mm">mm</string>
    <string name="distance_cm">cm</string>
    <string name="distance_dm">dm</string>
    <string name="distance_m">m</string>
    <string name="distance_km">km</string>
    <string name="distance_in">in</string>
    <string name="distance_ft">ft</string>
    <string name="distance_yd">yd</string>
    <string name="distance_mi">mi</string>
    <string name="distance_nmi">nmi</string>
    <string name="distance_ly">ly</string>
    <string name="distance_arshin">arshin</string>
    <string name="velocity_mpers">m/s</string>
    <string name="velocity_mpermin">m/min</string>
    <string name="velocity_kmpermin">km/min</string>
    <string name="velocity_kmperh">km/h</string>
    <string name="velocity_ftpers">ft/s</string>
    <string name="velocity_miperh">mph</string>
    <string name="velocity_mach">mach</string>
    <string name="velocity_kn">kn</string>
    <string name="area_mm2">mm2</string>
    <string name="area_cm2">cm2</string>
    <string name="area_dm2">dm2</string>
    <string name="area_m2">m2</string>
    <string name="area_km2">km2</string>
    <string name="area_a">a</string>
    <string name="area_ha">ha</string>
    <string name="area_in2">in2</string>
    <string name="area_ft2">ft2</string>
    <string name="area_yd2">yd2</string>
    <string name="area_acre">acre</string>
    <string name="volume_mm3">mm3</string>
    <string name="volume_cm3">cm3 (ml)</string>
    <string name="volume_dm3">dm3 (L)</string>
    <string name="volume_m3">m3</string>
    <string name="volume_in3">in3</string>
    <string name="volume_ft3">ft3</string>
    <string name="volume_yd3">yd3</string>
    <string name="volume_gal_uk">gal_uk</string>
    <string name="volume_oz_uk">oz_uk</string>
    <string name="volume_qt_uk">qt_uk</string>
    <string name="volume_pt_uk">pt_uk</string>
    <string name="volume_bbl">bbl</string>
    <string name="mass_mg">mg</string>
    <string name="mass_g">g</string>
    <string name="mass_kg">kg</string>
    <string name="mass_qq">qq</string>
    <string name="mass_t">t</string>
    <string name="mass_gr">gr</string>
    <string name="mass_oz">oz</string>
    <string name="mass_lb">lb</string>
    <string name="mass_ct">ct</string>
    <string name="mass_u">u</string>
    <string name="pressure_atm">atm</string>
    <string name="pressure_at">at</string>
    <string name="pressure_pa">Pa</string>
    <string name="pressure_hpa">hPa</string>
    <string name="pressure_kpa">kPa</string>
    <string name="pressure_bar">bar</string>
    <string name="pressure_mm_hg">mmHg</string>
    <string name="pressure_in_hg">inHg</string>
    <string name="pressure_mm_wg">mmWg</string>
    <string name="pressure_in_wg">inWg</string>
    <string name="pressure_psi">psi</string>
    <string name="temperature_celsius">˚C</string>
    <string name="temperature_fahrenheit">˚F</string>
    <string name="temperature_kelvin">K</string>
    <string name="temperature_rankin">˚Ra</string>
    <string name="temperature_réaumur">˚Ré</string>

    <!-- Settings -->
    <string name="basic">Basic</string>
    <string name="tab_default">Default tab</string>
    <string name="zero_div">Divide by zero</string>
    <string name="app_theme">Theme</string>
    <string name="app_auto_dark_theme">Auto dark theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_black">Black</string>
    <string name="theme_daynight">Time-based Day/Night</string>
    <string name="theme_daynight_system">Follow System</string>
    <string name="theme_daynight_battery">Follow Battery Saver</string>
    <string name="theme_daynight_start">Enable dark theme at</string>
    <string name="theme_daynight_end">Disable dark theme at</string>
    <string name="info">Info</string>
    <string name="changelog">Changelog</string>
    <string name="dev">Dev</string>
    <string name="about">About</string>
    <string name="app_version">App version</string>
    <string name="tab_last_opened">Last opened</string>
    <string name="daynight_support_message">If the system doesn\'t support Day/Night switch, this option won\'t work either</string>
    <string name="author_nick" translatable="false">ARTI1208</string>
    <string name="link_url_github" translatable="false">https://github.com/ARTI1208</string>
    <string name="link_url_gitlab" translatable="false">https://gitlab.com/ARTI1208</string>
    <string name="link_url_kde" translatable="false">https://invent.kde.org/artpinch</string>
    <string name="changelog_load_failed">Error loading changelog</string>
    <string name="preloaded_currencies_date" translatable="false">01.01.2021</string>

</resources>
