<?xml version="1.0" encoding="utf-8"?><!--suppress ALL -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="basic"
        android:layout="@layout/category"
        android:title="@string/basic">
        <DropDownPreference
            android:defaultValue="calc_tab"
            android:entries="@array/default_tab"
            android:entryValues="@array/default_tab_values"
            android:key="tab_default"
            android:title="@string/tab_default"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false" />
        <ListPreference
            android:defaultValue="system"
            android:entries="@array/app_theme"
            android:entryValues="@array/app_theme_values"
            android:key="app_theme"
            android:title="@string/app_theme"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="app_auto_dark_theme"
            android:title="@string/app_auto_dark_theme"
            android:summaryOff="@string/theme_dark"
            android:summaryOn="@string/theme_black"
            app:iconSpaceReserved="false" />

        <ru.art2000.extensions.preferences.TimePickerPreference
            android:key="app_auto_dark_theme_time_start"
            android:title="@string/theme_daynight_start"
            android:defaultValue="23:00"
            app:iconSpaceReserved="false" />

        <ru.art2000.extensions.preferences.TimePickerPreference
            android:key="app_auto_dark_theme_time_end"
            android:title="@string/theme_daynight_end"
            android:defaultValue="07:00"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>
    <PreferenceCategory
        android:key="currency"
        android:layout="@layout/category"
        android:title="@string/title_currency">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="save_currency_value"
            android:title="@string/save_currency_value"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/category"
        android:title="@string/title_calc">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="zero_div"
            android:summaryOff="@string/error"
            android:summaryOn="@string/infinity"
            android:title="@string/zero_div"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/category"
        android:title="@string/title_unit">
        <DropDownPreference
            android:entries="@array/unit_view"
            android:entryValues="@array/unit_view_values"
            android:key="unit_view"
            android:title="@string/unit_view"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/category"
        android:title="@string/about">
        <Preference
            android:key="app_version"
            android:title="@string/app_version"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>