<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:key="basic"
        android:layout="@layout/category"
        android:title="@string/basic">
        <ru.art2000.extensions.preferences.MyDropDownPreference
            android:defaultValue="calc_tab"
            android:entries="@array/default_tab"
            android:entryValues="@array/default_tab_values"
            android:key="tab_default"
            android:title="@string/tab_default"
            app:iconSpaceReserved="false" />

        <ru.art2000.extensions.preferences.Material3SwitchPreference
            android:defaultValue="true"
            android:key="app_dynamic_colors"
            android:title="@string/app_dynamic_colors"
            android:summaryOff="@string/app_dynamic_colors_off"
            android:summaryOn="@string/app_dynamic_colors_on"
            app:iconSpaceReserved="false" />

        <ru.art2000.extensions.preferences.MyDropDownPreference
            android:defaultValue="system"
            android:entries="@array/app_theme"
            android:entryValues="@array/app_theme_values"
            android:key="app_theme"
            android:title="@string/app_theme"
            app:iconSpaceReserved="false" />
        <ru.art2000.extensions.preferences.Material3SwitchPreference
            android:defaultValue="true"
            android:key="app_auto_dark_theme"
            android:title="@string/app_auto_dark_theme"
            android:summaryOff="@string/theme_dark"
            android:summaryOn="@string/theme_black"
            app:iconSpaceReserved="false" />

        <ru.art2000.extensions.preferences.MaterialTimePickerPreference
            android:key="app_auto_dark_theme_time_start"
            android:title="@string/theme_daynight_start"
            android:defaultValue="23:00"
            app:iconSpaceReserved="false" />

        <ru.art2000.extensions.preferences.MaterialTimePickerPreference
            android:key="app_auto_dark_theme_time_end"
            android:title="@string/theme_daynight_end"
            android:defaultValue="07:00"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>
</PreferenceScreen>